--- a/components/main.css
+++ b/components/main.css
@@ -3,6 +3,9 @@
 :root {
     --dark-text-clr: #383838e1;
     --white-text-clr: #ffffffde;
+    --yellow-gradient-clr: #fd9d30;
+    --orange-gradient-clr: #f37335;
+    --yellow-submit-clr: #fd9705;
 }
 
 body, html {
@@ -25,33 +28,121 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 250px;
+    flex-wrap: wrap;
+    gap: 150px;
 
-    background: linear-gradient(to left, #fd9d30, #f37335);
+    background: linear-gradient(to left, var(--yellow-gradient-clr), var(--orange-gradient-clr));
 }
 
 .website__content {
     width: 35vmin;
     height: 35vmin;
 
-    text-align: center;
-    color: var(--white-text-clr);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
 
-    border: 1px solid black;
+    text-align: center;
+
+    color: var(--white-text-clr);
+}
+
+.website__content .icon {
+    font-size: 75px;
+
+    animation: rocket-anim 2s ease-in-out infinite;
+}
+
+.about__us__text {
+    font-weight: normal;
+}
+
+.about__us__btn {
+    width: 100px;
+    height: 40px;
+
+    margin-top: 20px;
+
+    color: var(--dark-text-clr);
+
+    border: none;
+    border-radius: 2rem;
+}
+
+.about__us__btn:active {
+    border: 3px solid red;
+    box-shadow: 0 0 5px red;
 }
 
 .login__form {
-    width: 50vmin;
+    width: 60vmin;
     height: 50vmin;
+
+    padding-left: 30px;
+
+    display: flex;
+    flex-direction: column;
+
+    position: relative;
 
     border-bottom-left-radius: 15% 30%;
     border-top-left-radius: 15% 30%;
-    padding-left: 50px;
 
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
 
-    color: var(--dark-text-clr);
-
     background-color: white;
+}
+
+.login__form h1 {
+    margin-right: 30px;
+
+    text-align: center;
+    color: var(--dark-text-clr);
+}
+
+.input {
+    width: 200px;
+    height: 25px;
+
+    margin-left: 25px;
+    margin-top: 20px;
+
+    border: none;
+}
+
+.login__form .submit {
+    width: 100px;
+    height: 40px;
+
+    color: var(--white-text-clr);
+    font-weight: 900;
+
+    position: absolute;
+    left: 90%;
+    top: 90%;
+    transform: translate(-90%, -90%);
+
+    border: none;
+    border-radius: 2rem;
+    background-color: var(--yellow-submit-clr);
+}
+
+.login__form .submit:active {
+    border: 3px solid red;
+    box-shadow: 0 0 5px red;
+}
+
+@keyframes rocket-anim {
+    from {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+    to {
+        transform: translateY(0);
+    }
 }
