--- a/components/main.css
+++ b/components/main.css
@@ -1,152 +1,200 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 :root {
-    --dark-text-clr: #383838e1;
-    --white-text-clr: #ffffffde;
-    --yellow-gradient-clr: #fd9d30;
-    --orange-gradient-clr: #f37335;
-    --yellow-submit-clr: #fd9705;
+	--dark-text-clr: #383838e1;
+	--white-text-clr: #ffffffde;
+	--yellow-gradient-clr: #fd9d30;
+	--orange-gradient-clr: #f37335;
+	--yellow-submit-clr: #fd9705;
+	--profile-logo-clr: #383838e1;
 }
 
-body, html {
-    margin: 0;
-    padding: 0;
-    top: 0;
+body,
+html {
+	margin: 0;
+	padding: 0;
+	top: 0;
 
-    font-family: 'Lato', sans-serif;
+	font-family: "Lato", sans-serif;
 
-    background-repeat: none;
-    background-attachment: fixed;
+	background-repeat: none;
+	background-attachment: fixed;
 }
 
 #container {
-    width: 100vw;
-    height: 100vh;
+	width: 100vw;
+	height: 100vh;
 
-    position: absolute;
+	position: absolute;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 150px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 150px;
 
-    background: linear-gradient(to left, var(--yellow-gradient-clr), var(--orange-gradient-clr));
+	background: linear-gradient(
+		to left,
+		var(--yellow-gradient-clr),
+		var(--orange-gradient-clr)
+	);
 }
 
 .website__content {
-    width: 35vmin;
-    height: 35vmin;
+	width: 35vmin;
+	height: 35vmin;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	gap: 10px;
 
-    text-align: center;
+	text-align: center;
 
-    color: var(--white-text-clr);
+	color: var(--white-text-clr);
 }
 
 .website__content .icon {
-    font-size: 75px;
+	font-size: 75px;
 
-    animation: rocket-anim 2s ease-in-out infinite;
+	animation: rocket-anim 2s ease-in-out infinite;
 }
 
 .about__us__text {
-    font-weight: normal;
+	font-weight: normal;
 }
 
 .about__us__btn {
-    width: 100px;
-    height: 40px;
+	width: 100px;
+	height: 40px;
 
-    margin-top: 20px;
+	margin-top: 20px;
 
-    color: var(--dark-text-clr);
+	color: var(--dark-text-clr);
 
-    border: none;
-    border-radius: 2rem;
+	border: none;
+	border-radius: 2rem;
 }
 
 .about__us__btn:active {
-    border: 3px solid red;
-    box-shadow: 0 0 5px red;
+	border: 3px solid red;
+	box-shadow: 0 0 5px red;
 }
 
 .login__form {
-    width: 60vmin;
-    height: 50vmin;
+	width: 60vmin;
+	height: 50vmin;
 
-    padding-left: 30px;
+	padding-left: 30px;
 
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 
-    position: relative;
+	position: relative;
 
-    border-bottom-left-radius: 15% 30%;
-    border-top-left-radius: 15% 30%;
+	border-bottom-left-radius: 15% 30%;
+	border-top-left-radius: 15% 30%;
 
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+	border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px;
 
-    background-color: white;
+	background-color: white;
 }
 
 .login__form h1 {
-    margin-right: 30px;
+	margin-right: 30px;
 
-    text-align: center;
-    color: var(--dark-text-clr);
+	text-align: center;
+	color: var(--dark-text-clr);
 }
 
 .input {
-    width: 90%;
-    height: 25px;
+	width: 90%;
+	height: 25px;
 
-    margin-left: 25px;
-    margin-top: 20px;
+	margin-left: 25px;
+	margin-top: 20px;
 
-    border: none;
+	border: none;
 }
 
 .input:focus {
-    outline: none;
+	outline: none;
 }
 
 .login__form .submit {
-    width: 100px;
-    height: 40px;
+	width: 100px;
+	height: 40px;
 
-    color: var(--white-text-clr);
-    font-weight: 900;
+	color: var(--white-text-clr);
+	font-weight: 900;
 
-    position: absolute;
-    left: 90%;
-    top: 90%;
-    transform: translate(-90%, -90%);
+	position: absolute;
+	left: 90%;
+	top: 90%;
+	transform: translate(-90%, -90%);
 
-    border: none;
-    border-radius: 2rem;
-    background-color: var(--yellow-submit-clr);
+	border: none;
+	border-radius: 2rem;
+	background-color: var(--yellow-submit-clr);
 }
 
 .login__form .submit:active {
-    border: 3px solid red;
-    box-shadow: 0 0 5px red;
+	border: 3px solid red;
+	box-shadow: 0 0 5px red;
+}
+
+.profile__content {
+	width: 200px;
+	height: fit-content;
+
+	position: absolute;
+	left: 95%;
+	top: 3%;
+	transform: translate(-95%, 3%);
+
+	display: flex;
+	align-items: center;
+	flex-flow: wrap column;
+}
+
+.profile__logo {
+	font-size: 40px;
+	color: var(--profile-logo-clr);
+}
+
+.profile__disable {
+	display: none;
+
+	color: var(--dark-text-clr);
+}
+
+.profile__content__to__wrap {
+	display: block;
+
+	animation: profile-content-wrapper-anim 700ms ease-in-out forwards;
 }
 
 @keyframes rocket-anim {
-    from {
-        transform: translateY(0);
-    }
-    50% {
-        transform: translateY(-10px);
-    }
-    to {
-        transform: translateY(0);
-    }
+	from {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-10px);
+	}
+	to {
+		transform: translateY(0);
+	}
+}
+
+@keyframes profile-content-wrapper-anim {
+	from {
+		transform: translateY(0);
+		opacity: 0;
+	}
+	to {
+		transform: translateY(15px);
+		opacity: 1;
+	}
 }
